--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--CSS-->
+    <!--CSS-JS-->
     <link rel="stylesheet" href="style.css">
     <!--Icons-->
     <script src="https://kit.fontawesome.com/3661569a87.js" crossorigin="anonymous"></script>
@@ -21,6 +21,7 @@
             </div>
 
             <div class="nav">
+                <button id="btn-mobile">Menu</button>
                 <ul>
                     <li class="active-menu "><a href="#"><span>Início</span></a></li>
                     <li><a href="#">Peoplenet</a></li>
@@ -74,12 +75,12 @@
     <section id="partners">
         <div class="container" id="partners-area">
             <div class="imagem">
-                <img src="imagens/SaoLucas.jpeg" alt="sao lucas">
+                <img src="imagens/SaoLucas.jpeg" alt="sao lucas" class="closed">
                 <img src="imagens/chn.jpeg" alt="chn">
                 <img src="imagens/vita.jpeg" alt="vita">
                 <img src="imagens/arauco.jpeg" alt="arauco">
-                <img src="imagens/gsk.jpeg" alt="gsk">
-                <img src="imagens/michelin.jpeg" alt="michelin">
+                <img src="imagens/gsk.jpeg" alt="gsk" class="closed">
+                <img src="imagens/michelin.jpeg" alt="michelin" class="closed">
             </div>
         </div>
 
@@ -97,7 +98,7 @@
                 <p>Praça Floriano, 55, Cobertura 1</p>
                 <p>Centro, Rio de Janeiro</p>
             </div>
-            <div class="box-contact">
+            <div class="closed" class="box-contact">
                 <h3>Newslater</h3>
                 <form action="local.php">
                     <label for="email"></label>
@@ -118,7 +119,7 @@
                 <img src="imagens/logo.png" alt="logo" class="logo1">
                 <p>Além de possuir mais de 20 módulos, o  <a href="#" class="peoplenet">Peoplenet</a>  se adapta a qualquer tipo de empresa,  é totalmente integrado ao eSocial e auxilia na  certificação OHSAS 18001.</p>
                 <p>Empresa Parceira:</p>
-                <img src="imagens/alter.png" alt="alteredata" >
+                <img src="imagens/alter.png" alt="alteredata" class="">
             </div>
 
             <div class="box-footer" id="margin">
@@ -165,6 +166,7 @@
             <p>Desenvolvimento: www.digicriativa.com.br</p>
         </div>
     </div>
+    
     
   
 </body>
