--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <img src="imagens/SaoLucas.jpeg" alt="sao lucas" class="closed">
                 <img src="imagens/chn.jpeg" alt="chn">
                 <img src="imagens/vita.jpeg" alt="vita">
-                <img src="imagens/arauco.jpeg" alt="arauco">
+                <img src="imagens/arauco.jpeg" alt="arauco" class="closed">
                 <img src="imagens/gsk.jpeg" alt="gsk" class="closed">
                 <img src="imagens/michelin.jpeg" alt="michelin" class="closed">
             </div>
